<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding16"
    android:background="@color/cardview_dark_background"
    tools:context=".VeMostrarDatosAlumnoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:text="@string/DevBy"
        style="@style/TextAppearance.GVILLEDA.Title.Datos"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/Name"
        style="@style/TextAppearance.GVILLEDA.Title.Datos"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/MyName"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:text="@string/Code"
        style="@style/TextAppearance.GVILLEDA.Title.Datos"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:text="@string/MyCode"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/marginTop32"
        android:text="@string/tvVersion"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.GVILLEDA.Title" />

    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="64dp"
        android:textSize="@dimen/textSize_button"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgDerechosReservados" />

</LinearLayout>